--- a/picapport-heic-plugin/pom.xml
+++ b/picapport-heic-plugin/pom.xml
@@ -32,7 +32,7 @@ under the License.
 	<parent>
 		<groupId>com.github.giamma</groupId>
 		<artifactId>picapport-heic-plugin-parent</artifactId>
-		<version>1.0.0-SNAPSHOT</version>
+		<version>1.0.0</version>
 		<relativePath>../picapport-heic-plugin-parent</relativePath>
 	</parent>
 	<artifactId>picapport-heic-plugin</artifactId>
